fix(select): fix multi-select chips wrap (#211)

--- a/projects/extensions/select/select.scss
+++ b/projects/extensions/select/select.scss
@@ -75,10 +75,8 @@
   &.ng-select-multiple {
     .ng-select-container {
       .ng-value-container {
-        margin: -4px 0;
-
         .ng-value {
-          margin-right: 4px;
+          margin: 2px 4px 2px 0;
           border-radius: 16px;
           font-size: .875em;
           line-height: 18px;
